--- a/lab4.1/lab4.1.vcxproj.filters
+++ b/lab4.1/lab4.1.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="lab4.1.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Source.cpp">
+      <Filter>Файлы ресурсов</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
